--- a/flask/templates/login.html
+++ b/flask/templates/login.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Logowanie</h1>
-    <form method="POST">
+    <form method="POST" action="/login">
         <label for="username">Nazwa użytkownika:</label>
         <input type="text" id="username" name="username" required><br><br>
 
